<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Modificar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_modificar_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/name"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/et_modificar_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/write_here"
                android:layout_below="@id/tv_modificar_nombre"/>

            <TextView
                android:id="@+id/tv_modificar_apellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/apellidos"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/et_modificar_nombre"/>

            <EditText
                android:id="@+id/et_modificar_apellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/write_here"
                android:layout_below="@id/tv_modificar_apellidos"/>

            <TextView
                android:id="@+id/tv_modificar_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/username"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/et_modificar_apellidos"/>

            <EditText
                android:id="@+id/et_modificar_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/write_here"
                android:layout_below="@id/tv_modificar_username"/>

            <TextView
                android:id="@+id/tv_modificar_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/password"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/et_modificar_username"/>

            <EditText
                android:id="@+id/et_modificar_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:inputType="textPassword"
                android:hint="@string/write_here"
                android:layout_below="@id/tv_modificar_password"/>

            <TextView
                android:id="@+id/tv_modificar_dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/dni"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/et_modificar_password"/>

            <EditText
                android:id="@+id/et_modificar_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="@string/write_here"
                android:layout_below="@id/tv_modificar_dni"/>

            <TextView
                android:id="@+id/tv_modificar_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="@string/birthdate"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/et_modificar_dni"/>

            <EditText
                android:id="@+id/et_modificar_birthdate"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:hint="yyyy-MM-dd"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:layout_below="@id/et_modificar_dni"/>

            <Button
                android:id="@+id/bt_modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/aceptar"
                android:onClick="aceptar"
                android:layout_below="@id/tv_modificar_birthdate"/>

            <ProgressBar
                android:id="@+id/pb_modificar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:visibility="gone"/>

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>